src/objects/hed__Behavior_Response__c.object
<CustomObject>
    <description>Stores information about the response to a behavior event.</description>
    <fields>
        <fullName>hed__Behavior_Involvement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system-generated number associated with this event. Format: BI-{0000}.</description>
        <inlineHelpText>The system-generated number associated with this event. Format: BI-{0000}.</inlineHelpText>
        <label>Behavior Involvement</label>
        <referenceTo>hed__Behavior_Involvement__c</referenceTo>
        <relationshipLabel>Behavior Responses</relationshipLabel>
        <relationshipName>Behavior_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Contact__c</fullName>
        <description>The recipient of this response.</description>
        <formula>HYPERLINK(&quot;/&quot; + hed__Behavior_Involvement__r.hed__Contact__c, hed__Behavior_Involvement__r.hed__Contact__r.FirstName + &quot; &quot; + hed__Behavior_Involvement__r.hed__Contact__r.LastName)</formula>
        <inlineHelpText>The recipient of this response.</inlineHelpText>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Description__c</fullName>
        <description>A description of the Behavior Response.</description>
        <inlineHelpText>A description of the Behavior Response.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__End_Date__c</fullName>
        <description>The date when the response ends.</description>
        <inlineHelpText>The date when the response ends.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Start_Date__c</fullName>
        <description>The date when the response starts.</description>
        <inlineHelpText>The date when the response starts.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Status__c</fullName>
        <description>The status of the response taken.</description>
        <inlineHelpText>The status of the response taken.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Type__c</fullName>
        <description>The type of response taken.</description>
        <inlineHelpText>The type of response taken.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Academic Probation</fullName>
                </value>
                <value>
                    <fullName>Expulsion</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Behavior Response</label>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>Behavior Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Behavior Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>